Fix collapsing sidebar title in viewer

--- a/src/resources/formats/html/bootstrap/_bootstrap-variables.scss
+++ b/src/resources/formats/html/bootstrap/_bootstrap-variables.scss
@@ -37,4 +37,3 @@ $code-theme-dark-threshhold: 40% !default;
 // If by default we don't have a body background, then use white
 $body-bg: #fff !default;
 $sidebar-bg: $body-bg !default;
-$sidebar-title-max-width: 275px !default;
