--- a/src/resources/projects/website/navigation/quarto-nav.scss
+++ b/src/resources/projects/website/navigation/quarto-nav.scss
@@ -41,11 +41,6 @@ nav .dropdown-item i {
 .sidebar-title {
   padding-bottom: 0.5rem;
   font-size: 1.5rem;
-  max-width: $sidebar-title-max-width;
-}
-
-.sidebar-subtitle {
-  max-width: $sidebar-title-max-width;
 }
 
 .sidebar-navigation .active {
@@ -227,7 +222,6 @@ header.headroom--unpinned {
 
   .sidebar .sidebar-footer {
     visibility: visible;
-    max-width: $sidebar-title-max-width;
   }
 }
 
